# file-streaming-job

./: Makefile  application.conf  driver.py  readme.md  setup.cfg
docker/: Dockerfile
file_streaming_job/: __init__.py  config.py  file_sync.py  main.py
tests/: __init__.py  _spark_session.py  test_file_streaming_job.py
