[metadata]
name = file_streaming_job
version = 0.2.0
author = Namig Aliyev
author_email = namig@iomete.com
description = File streaming capabilities
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = file_streaming_job
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = file_streaming_job
install_requires =
    pyhocon~=0.3.59
    setuptools~=60.2.0

[options.extras_require]
dev =
    pyspark==3.1.2
    pytest==7.1.2
